--- a/Labs/Lab05_XNA_Animacion/MarioAnimatedSprites/AnimatedSprites/AnimatedSprites/AnimatedSprites.csproj
+++ b/Labs/Lab05_XNA_Animacion/MarioAnimatedSprites/AnimatedSprites/AnimatedSprites/AnimatedSprites.csproj
@@ -75,6 +75,7 @@
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Net" />
     <Reference Include="System.Xml">
       <Private>False</Private>
     </Reference>
@@ -86,6 +87,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cliente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
